<resources>
    <string name="app_name">lab03</string>

    <string name="theme">Dark Theme</string>

    <string name="time">Time</string>
    <string name="mass">Mass</string>
    <string name="currency">Currency</string>
    <string name="distance">Distance</string>

    <string name="from">From:</string>
    <string name="to">To:</string>

    <string name="convert">Convert</string>

</resources>