<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onRadioGroupClick"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/time"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbMass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/mass"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbCurrency"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/currency"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbDistance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppins"
            android:text="@string/distance"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twFrom"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/from"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textFrom"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="Enter a decimal"
            android:inputType="number|numberDecimal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twTo"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textTo"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="number|numberDecimal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="255dp"
            android:layout_height="71dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppins"
            android:onClick="onConvertClick"
            android:text="@string/convert"
            android:textSize="18dp"
            app:strokeColor="#9C27B0" />

        <ImageView
            android:id="@+id/imgCopy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="onCopyIconClick"
            android:src="@drawable/copy96" />
    </LinearLayout>

</LinearLayout>